tryina fix the fullpage on mobile

--- a/wp-content/themes/modernfuture/sass/_aside.scss
+++ b/wp-content/themes/modernfuture/sass/_aside.scss
@@ -7,7 +7,7 @@
 		z-index: 2;
 		padding: 40px;
 		box-sizing: border-box;
-		background-color: rgba(95,66,109,0.8);
+		background-color: rgba(95,66,109,0.85);
 	}
 	.menuToggleContainer{
 		position: fixed;
